...
                                    borderRadius: BorderRadius.circular(24),
                                    border: Border.all(
                                      color: const Color(0xFF4C3F6D),
                                    ),
                                  ),
                                  child: Text(
                                    "Disponibles",
                                    textAlign: TextAlign.center,
                                    style: TextStyle(
                                      color: showAvailable.value
                                          ? Colors.white
                                          : const Color(0xFF4C3F6D),
                                      fontWeight: FontWeight.bold,
...
                                    borderRadius: BorderRadius.circular(24),
                                    border: Border.all(
                                      color: const Color(0xFF4C3F6D),
                                    ),
                                  ),
                                  child: Text(
                                    "Finalizadas",
                                    textAlign: TextAlign.center,
                                    style: TextStyle(
                                      color: !showAvailable.value
                                          ? Colors.white
                                          : const Color(0xFF4C3F6D),
                                      fontWeight: FontWeight.bold,
...
                                padding: const EdgeInsets.symmetric(
                                  vertical: 14,
                                  horizontal: 18,
                                ),
                              ),
                              child: const Text(
                                "Ver resultados generales",
                                style: TextStyle(color: Colors.white),
                              ),
                            ),
                            ElevatedButton(
                              onPressed: () {
                                controller.createActivityPage(courseId);
...
