...
                        ],
                      ),

                      const SizedBox(height: 30),

                      ElevatedButton(
                        key: const Key("createButton"),
                        onPressed: () {
                          if (_formKey.currentState!.validate()) {
                            final name = nameController.text.trim();
                            final nrc = nrcController.text.trim();

                            createController.createCourse(name, nrc);
...
